# NeuralNet

RostinNE/: .gitignore  RostinNE.sln
RostinNE/RostinNE/: CMakeLists.txt  Connection.h  Defines.h  INet.h  INeuron.h  Net.cpp  Net.h  Neuron.cpp  Neuron.h  RostinNE.vcxproj  RostinNE.vcxproj.filters  Source.cpp  TrainingData.cpp  TrainingData.h  stdafx.h  trainingData.txt
